--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Phone: 9208630184</p>
-<p>Email: bcamahtab@gmail.com</p>
+<p>Phone: 9208xxxxxx</p>
+<p>Email: xxxxxxxxx@gmail.com</p>
 <p>Address:</p>
 <p>
-  Kursi Highway<br />
+  xxxxx xxxxxxx<br />
   Lucknow<br />
   Uttar Pradesh <br />
 </p>
